@@ -177,14 +177,16 @@
 		<Product type="1d03" id="008c" name="ZW140 Dual Nano Switch" config="aeotec/zw140.xml"/>
 	</Manufacturer>
 	<Manufacturer id="0371" name="Aeotec">
+		<Product type="0003" id="0001" name="ZWA001 LED Bulb 6 Multi-White" config="aeotec/zwa001.xml"/>
+		<Product type="0103" id="0001" name="ZWA001 LED Bulb 6 Multi-White" config="aeotec/zwa001.xml"/>
+		<Product type="0003" id="0002" name="ZWA002 LED Bulb 6 Multi-Color" config="aeotec/zwa002.xml"/>
+		<Product type="0103" id="0002" name="ZWA002 LED Bulb 6 Multi-Color" config="aeotec/zwa002.xml"/>
 		<Product type="0002" id="0003" name="ZWA003 NanoMote Quad" config="aeotec/zwa003.xml"/>
 		<Product type="0102" id="0003" name="ZWA003 NanoMote Quad" config="aeotec/zwa003.xml"/>
 		<Product type="0002" id="0004" name="ZWA004 NanoMote One" config="aeotec/zwa004.xml"/>
 		<Product type="0102" id="0004" name="ZWA004 NanoMote One" config="aeotec/zwa004.xml"/>
 		<Product type="0002" id="0005" name="ZWA005 TriSensor" config="aeotec/zwa005.xml"/>
 		<Product type="0102" id="0005" name="ZWA005 TriSensor" config="aeotec/zwa005.xml"/>
-		<Product type="0003" id="0001" name="ZWA001 LED Bulb 6 Multi-White" config="aeotec/zwa001.xml"/>
-		<Product type="0103" id="0001" name="ZWA001 LED Bulb 6 Multi-White" config="aeotec/zwa001.xml"/>
 	</Manufacturer>
 	<Manufacturer id="0111" name="Airline Mechanical">
 		<Product type="8200" id="0200" name="ZDS-100"/>
