@@ -86,6 +86,7 @@ DISTFILES =	.gitignore \
 	config/aeotec/zw139.xml \
 	config/aeotec/zw140.xml \
 	config/aeotec/zwa001.xml \
+	config/aeotec/zwa002.xml \
 	config/aeotec/zwa003.xml \
 	config/aeotec/zwa004.xml \
 	config/aeotec/zwa005.xml \
