@@ -218,6 +218,7 @@ Version 1.5
  - Add Aeotec ZWA004 NanoMote One (Nechry)
  - Add Aeotec ZWA005 TriSensor (Nechry)
  - Add Devolo Smoke Detector MT02651 (Nechry)
+ - Add Aeotec ZWA002 LED Bulb 6 Multi-Color (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
